--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                         <p class="f">Mic tricks to take <br> you to the next level</p>
                         <br>
                         <p class="b">Stop rolling with those default settings on your mic. These small tweaks will
-                            <br>take you from sounding good to great.</p> <br>
+                            <br>take you from sounding good to great.
+                        </p> <br>
                         <button class="nav">View Episode Details</button>
                     </div>
                 </div>
@@ -119,19 +120,22 @@
             <div class="cover">
                 <div class="fit">
                     <div class="fet"><br><br><br>
-                        <img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt="">
-                        <p class="sed">I can’t recommend <br> this podcast  <br>enough</p>
+                        <img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg"
+                            alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt="">
+                        <p class="sed">I can’t recommend <br> this podcast <br>enough</p>
                         <br>
                         <p class="gen">Betty Lacey</p>
                     </div>
                     <div class="fet"><br><br><br>
-                        <img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt="">
-                        <p class="sed">Jacob is the best  <br>in the business</p>
+                        <img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg"
+                            alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt="">
+                        <p class="sed">Jacob is the best <br>in the business</p>
                         <br>
                         <p class="gen">Adam Driver</p>
                     </div>
                     <div class="fet"><br><br><br>
-                        <img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt="">
+                        <img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg"
+                            alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt="">
                         <p class="sed">A wealth of audio <br> knowledge</p>
                         <br>
                         <p class="gen">Marcus Brown</p>
@@ -139,26 +143,62 @@
                 </div> <br><br><br>
                 <div class="fit">
                     <div class="fet"><br><br><br>
-                        <img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt="">
+                        <img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg"
+                            alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt="">
                         <p class="sed">Every episode is a <br> gem!</p>
                         <br>
                         <p class="gen">Jessica Knowl</p>
                     </div>
                     <div class="fet"><br><br><br>
-                        <img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt="">
+                        <img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg"
+                            alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt="">
                         <p class="sed">Whoa whoa, let me <br> take some notes!</p>
                         <br>
                         <p class="gen">Scott Adams</p>
                     </div>
                     <div class="fet"><br><br><br>
-                        <img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt="">
-                        <p class="sed">I’ve upped my <br> game considerably <br>since I started  <br>listening</p>
-                        
+                        <img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg"
+                            alt=""><img src="./imeges/zv.svg" alt=""><img src="./imeges/zv.svg" alt="">
+                        <p class="sed">I’ve upped my <br> game considerably <br>since I started <br>listening</p>
+
                         <p class="gen">Marcus Brown</p>
                     </div>
                 </div>
             </div>
-            
+            <div class="footer">
+                <div class="frame">
+                    <div class="castway">
+                        <p class="text">Castaway</p><br>
+                        <img src="./imeges/ll.png" alt="">
+                    </div>
+                    <div class="home">
+                        <p class="sade">
+                            Home <br>
+                            About <br>
+                            Episodes <br>
+                            Contact
+                        </p>
+                    </div>
+                    <div class="style">
+                        <p class="sade"> Style Guide <br>
+                            Instructions <br>
+                            Changelog <br>
+                            Credit <br>
+                            Powered by Webflow <br>
+                            Licenses <br>
+                        </p>
+                    </div>
+                    <div class="weder">
+                        <img src="./imeges/Vector.png" alt="">
+                        <img src="./imeges/Group.png" alt="">
+                        <img src="./imeges/cold.png" alt="">
+                        <img src="./imeges/seder.png" alt="">
+                        <img src="./imeges/wector.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+
         </div>
     </div>
 </body>
